@@ -9,6 +9,7 @@ PHP                                                                        NEWS
     visibility are ignored). (ilutov)
   . Fixed bug GH-15419 (Missing readonly+hook incompatibility check for readonly
     classes). (ilutov)
+  . Fixed bug GH-15187 (Various hooked object iterator issues). (ilutov)
 
 15 Aug 2024, PHP 8.4.0beta3
 
